archive/python_abandoned/1.0.0/Chat.md
# LineByLine Python Port — Session Log

## Prompt
Continue and then handoff if context feels stale

---
This turn closed all remaining gaps identified in the previous session.

**`main_window.py` (updated):**

1. `settings_changed` wired — `self.settings_dialog.settings_changed.connect(self._on_settings_changed)` added after dialog creation. `_on_settings_changed` calls `hk_mgr.rebuild()` + `controls.rebuild_hk_grid()` + resyncs seek offset display.

2. Theme support — `_toggle_theme` now cycles `cfg["theme"]` between `"light"` and `"dark"`, saves cfg, calls `_apply_theme(self, theme)`, and updates the toolbar icon. `_apply_theme` is a module-level function: empty string for light (default Qt style), `_DARK_QSS` for dark (~25-rule QSS covering all widget types). Saved theme is applied on startup in `_restore_session`.

3. Keyboard navigation — `keyPressEvent` on `MainWindow` handles in hotkey mode: `Up`/`Down` with `Shift` (extend selection) / `Ctrl` (move without clearing), boundary guards matching the JS `firstLyricLine`/`lastLyricLine` checks; `PageUp`/`PageDown` (page size = editor height ÷ 20px); `Home`/`End` (jump to first/last non-meta line). All suppress audio auto-line for 1500ms. Falls through to `super()` in typing mode.

**`settings_dialog.py` (updated):**

`_apply_filter` rewritten — old fallback `True` for rows with no `search_text` property made unmatched rows always visible. Now uses `w.property("search_text") or ""` so rows without a search label are hidden when a filter is active.

---

## Full file inventory (all syntax-checked)

| File | Status |
|---|---|
| `main.py` | Complete — entry point |
| `config.py` | Complete — DEFAULT_CFG, HK_SECTIONS, HK_LABELS, restriction rules |
| `state.py` | Complete — AppState dataclass with undo/redo methods |
| `lrc.py` | Complete — all LRC parsing, Genius/paste cleaning, sync ops (no Qt) |
| `persistence.py` | Complete — cfg + session JSON via platformdirs |
| `audio_player.py` | Complete — QMediaPlayer wrapper |
| `import_export.py` | Complete — file dialogs, signals |
| `controls_panel.py` | Complete — full left panel |
| `editor_panel.py` | Complete — two-mode editor, secondary columns, scroll sync |
| `hotkeys.py` | Complete — QShortcut manager |
| `main_window.py` | Complete — full wiring, nav, theme |
| `settings_dialog.py` | Complete — all settings UI, hotkey capture rows, search |
| `help_dialog.py` | Stub — renders HELP.md via setMarkdown |

---

## Known gaps to verify at first runtime

1. **QShortcut context** — `hotkeys.py` sets `WindowShortcut` context conditionally. If shortcuts don't fire when focus is in editor/controls, try `Qt.ShortcutContext.ApplicationShortcut` for the hotkey-only actions.

2. **Secondary scroll sync** — `_SecTextEdit` subclass in `editor_panel.py`: verify `_build()` scrollbar signal connection on `self._ta` still holds after subclass instantiation. If not, move signal connection to after `self._ta = _SecTextEdit(...)`.

3. **Line renderer key bubbling** — `_LineRenderer` is a `QScrollArea` that calls `e.ignore()` on key presses. Qt `QScrollArea` may consume arrow keys before they reach `MainWindow.keyPressEvent`. If so, install an event filter on `_LineRenderer` in `EditorPanel.__init__` that re-emits ignored key events to the window.

4. **Dark theme incomplete** — `_DARK_QSS` in `main_window.py` uses hardcoded hex colours. The custom `_ProgressBar` painter in `controls_panel.py` also uses hardcoded `#d0d7de` / `#0969da`. For correct dark mode, those need to read from `QPalette` or accept a colour argument.

5. **`setProperty` / `property()` round-trip** — `_Chk` and `_NumRow` in `settings_dialog.py` set `search_text` via `setProperty`. Verify `w.property("search_text")` returns the string (not `None`) at filter time; Qt sometimes coerces Python strings to `QVariant` in ways that round-trip as `None` on older PySide6 builds.

6. **`_LyricTextEdit` type hint** — `insertFromMimeData(self, source: QMimeData)` references `QMimeData` but the import was removed. Works at runtime; add `from PySide6.QtCore import QMimeData` to `editor_panel.py` imports if using mypy.

## Recommended first-run sequence

```bash
pip install PySide6 platformdirs
python main.py
```

Then exercise in order:
1. Open an audio file → verify title/artist appear, playback works
2. Open an LRC file → verify lines render in hotkey mode
3. Tab → verify typing mode, paste Genius page
4. Ctrl+, → verify settings dialog opens, hotkey capture works
5. Ctrl+. → verify theme toggles
6. Arrow keys in hotkey mode → verify navigation
7. Add field, paste translation, Merge fields
