archive/python_abandoned/1.0.1/Chat.md
# LineByLine Python Port — Session Log

## Prompt
Continue and then handoff if context feels stale

---
This turn closed all remaining gaps identified in the previous session.

**`main_window.py` (updated):**

1. `settings_changed` wired — `self.settings_dialog.settings_changed.connect(self._on_settings_changed)` added after dialog creation. `_on_settings_changed` calls `hk_mgr.rebuild()` + `controls.rebuild_hk_grid()` + resyncs seek offset display.

2. Theme support — `_toggle_theme` now cycles `cfg["theme"]` between `"light"` and `"dark"`, saves cfg, calls `_apply_theme(self, theme)`, and updates the toolbar icon. `_apply_theme` is a module-level function: empty string for light (default Qt style), `_DARK_QSS` for dark (~25-rule QSS covering all widget types). Saved theme is applied on startup in `_restore_session`.

3. Keyboard navigation — `keyPressEvent` on `MainWindow` handles in hotkey mode: `Up`/`Down` with `Shift` (extend selection) / `Ctrl` (move without clearing), boundary guards matching the JS `firstLyricLine`/`lastLyricLine` checks; `PageUp`/`PageDown` (page size = editor height ÷ 20px); `Home`/`End` (jump to first/last non-meta line). All suppress audio auto-line for 1500ms. Falls through to `super()` in typing mode.

**`settings_dialog.py` (updated):**

`_apply_filter` rewritten — old fallback `True` for rows with no `search_text` property made unmatched rows always visible. Now uses `w.property("search_text") or ""` so rows without a search label are hidden when a filter is active.

---

## Full file inventory (all syntax-checked)

| File | Status |
|---|---|
| `main.py` | Complete — entry point |
| `config.py` | Complete — DEFAULT_CFG, HK_SECTIONS, HK_LABELS, restriction rules |
| `state.py` | Complete — AppState dataclass with undo/redo methods |
| `lrc.py` | Complete — all LRC parsing, Genius/paste cleaning, sync ops (no Qt) |
| `persistence.py` | Complete — cfg + session JSON via platformdirs |
| `audio_player.py` | Complete — QMediaPlayer wrapper |
| `import_export.py` | Complete — file dialogs, signals |
| `controls_panel.py` | Complete — full left panel |
| `editor_panel.py` | Complete — two-mode editor, secondary columns, scroll sync |
| `hotkeys.py` | Complete — QShortcut manager |
| `main_window.py` | Complete — full wiring, nav, theme |
| `settings_dialog.py` | Complete — all settings UI, hotkey capture rows, search |
| `help_dialog.py` | Stub — renders HELP.md via setMarkdown |

---

## Known gaps to verify at first runtime

1. **QShortcut context** — `hotkeys.py` sets `WindowShortcut` context conditionally. If shortcuts don't fire when focus is in editor/controls, try `Qt.ShortcutContext.ApplicationShortcut` for the hotkey-only actions.

2. **Secondary scroll sync** — `_SecTextEdit` subclass in `editor_panel.py`: verify `_build()` scrollbar signal connection on `self._ta` still holds after subclass instantiation. If not, move signal connection to after `self._ta = _SecTextEdit(...)`.

3. **Line renderer key bubbling** — `_LineRenderer` is a `QScrollArea` that calls `e.ignore()` on key presses. Qt `QScrollArea` may consume arrow keys before they reach `MainWindow.keyPressEvent`. If so, install an event filter on `_LineRenderer` in `EditorPanel.__init__` that re-emits ignored key events to the window.

4. **Dark theme incomplete** — `_DARK_QSS` in `main_window.py` uses hardcoded hex colours. The custom `_ProgressBar` painter in `controls_panel.py` also uses hardcoded `#d0d7de` / `#0969da`. For correct dark mode, those need to read from `QPalette` or accept a colour argument.

5. **`setProperty` / `property()` round-trip** — `_Chk` and `_NumRow` in `settings_dialog.py` set `search_text` via `setProperty`. Verify `w.property("search_text")` returns the string (not `None`) at filter time; Qt sometimes coerces Python strings to `QVariant` in ways that round-trip as `None` on older PySide6 builds.

6. **`_LyricTextEdit` type hint** — `insertFromMimeData(self, source: QMimeData)` references `QMimeData` but the import was removed. Works at runtime; add `from PySide6.QtCore import QMimeData` to `editor_panel.py` imports if using mypy.

## Recommended first-run sequence

```bash
pip install PySide6 platformdirs
python main.py
```

Then exercise in order:
1. Open an audio file → verify title/artist appear, playback works
2. Open an LRC file → verify lines render in hotkey mode
3. Tab → verify typing mode, paste Genius page
4. Ctrl+, → verify settings dialog opens, hotkey capture works
5. Ctrl+. → verify theme toggles
6. Arrow keys in hotkey mode → verify navigation
7. Add field, paste translation, Merge fields

---

## Prompt
Chat history and latest Python project files attached; handoff suggestions at bottom.
For recommended first-run sequence I ran these as regular Windows user

```cmd
pip install PySide6 platformdirs
python main.py
```

Then added folder to Environment Variables → System variables → Path: `C:\Users\me\AppData\Roaming\Python\Python314\Scripts`
The result: below output, a new __pycache__ folder containing main_window.cpython-314.pyc (also attached), and no app window opens

```cmd
D:\Claude Files\1.0.0>python main.py
Traceback (most recent call last):
  File "D:\Claude Files\1.0.0\main.py", line 8, in <module>
    from main_window import MainWindow
  File "D:\Claude Files\1.0.0\main_window.py", line 7, in <module>
    from PySide6.QtWidgets import (
    ...<2 lines>...
    )
ImportError: cannot import name 'QAction' from 'PySide6.QtWidgets' (C:\Users\me\AppData\Roaming\Python\Python314\site-packages\PySide6\QtWidgets.pyd)
D:\Claude Files\1.0.0>
```

Should I reinstall as admin or can this misconfig be easily fixed?

---
No reinstall needed. `QAction` migrated from `QtWidgets` → `QtGui` in PySide6 6.0 — your Python 3.14 install has a recent enough build where that's final. The fix is one line: move `QAction` from the `QtWidgets` import to `QtGui` in `main_window.py`. Patched file presented above.

If it boots and you hit more `ImportError`s with similar "cannot import name X from QtWidgets" messages, the pattern is always the same: move the name to `QtGui`.

---

## Prompt
Cmd output:

```cmd
D:\Claude Files\1.0.0>python main.py
[... QAction ImportError ...]
D:\Claude Files\1.0.0>python main.py
Traceback (most recent call last):
  ...
  File "D:\Claude Files\1.0.0\settings_dialog.py", line 130, in _build_section_auto_strip
    self._all_rows += [self._chk_strip_meta, self._chk_strip_sections,
    ^^^^^^^^^^^^^^
AttributeError: 'SettingsDialog' object has no attribute '_all_rows'
D:\Claude Files\1.0.0>
```

---
`_all_rows = []` was missing from `_build()` — the section builders were appending to it before it existed. Added `self._all_rows: list = []` as the first line of `_build()`. Replace `settings_dialog.py` and retry.

---

## Prompt
Latest errors — still not opening a real window. Is there a better source of logs than the terminal itself I should share?

```
AttributeError: 'SettingsDialog' object has no attribute '_hk_rows'. Did you mean: '_all_rows'?
```

---
`_all_rows`, `_hk_rows`, and `_hk_search_mode` were all initialized at the end of `_build()` (after the footer), but the section builders that use them run earlier in the same method. Moved all three to the very top of `_build()` and removed the duplicate assignments. Replace `settings_dialog.py` and retry.

The terminal traceback is the right tool for crashes like these. Once the window is open, optionally add to `main.py` to capture Qt's own runtime warnings: `from PySide6.QtCore import qInstallMessageHandler; qInstallMessageHandler(lambda t,c,m: print(m))`.

---

## Prompt
Bucket A: Ctrl+Left is already what Settings shows (see pythonsettings4.png), otherwise agree with doing this first in one pass
Bucket B: Clarifying that I dislike horizontal overflow, otherwise agree with doing that next separately
Bucket C: Assign Ctrl+R hotkey under Save hotkey in Settings and call it "Reset". Implement middle click on main window. Map Segoe UI and Georgia if they wouldn't violate the GPL 3 license. Do whichever of these fits into Bucket A in that bucket, otherwise last
[+ screenshots and Feedback.md attached]

---
Full Bucket A pass across five files. All syntax-checked.

**config.py** — `reset` hotkey (`Ctrl+R`) in `DEFAULT_CFG`, `HK_SECTIONS`, `HK_LABELS`, `_PINNED`. `migrate_cfg` backfills it into old saved configs. `FONT_OPTIONS` constant added (`[("System Sans", "Segoe UI"), ("System Serif", "Georgia")]`).

**main_window.py** — `QAction` moved to `QtGui`, `QByteArray` imported. Reset toolbar button + `_do_reset()`. `_on_audio_loaded` resets title/artist/time display on new audio load. Theme icon corrected to 🌙/☀️. Window geometry saved on close, restored on startup. Startup focus goes to editor (not speed spinbox). Middle-click `mousePressEvent` on main window. `reset` action dispatched. `_on_line_play_requested` drives audio seek+play when a line is clicked. `line_play_requested` signal wired from editor.

**editor_panel.py** — `QApplication` imported. `_LyricTextEdit.keyPressEvent` intercepts Tab (passes it up so hotkey manager handles mode toggle). `_LineRenderer` scrollbar changed to `AsNeeded` (removes always-on Win95 scrollbar). `_LineRenderer` gets `StrongFocus` + Ctrl+V paste handler (enables Genius paste in hotkey mode). `line_play_requested` signal bubbled renderer → `_MainColumn` → `EditorPanel`. `_on_line_click` emits it on plain left-click (no shift/ctrl).

**controls_panel.py** — `_VolumeSlider.wheelEvent` emits `wheel_scrolled` signal. `ControlsPanel._on_vol_wheel` handles it with correct vol_increment.

**settings_dialog.py** — `_btn_clear.mousePressEvent` sets `_skip_blur = True` before focus-out fires, fixing X-button race condition.

## Known remaining items for Bucket B (visual/aesthetic — new chat)
- Spinner layout: horizontal overflow → compact vertical ▲▼ stacked beside field (as in HTML)
- HK badge styling: `[Space]` plain text → styled pill like HTML `.hk-key`
- Sync file badge not showing in Controls
- Now Playing / Controls color inversion (surface vs panel background)
- Pause icon: ⏸️ emoji → solid geometric SVG matching play/seek buttons
- Main header contrast (gray instead of white)
- Checkbox alignment in dark mode (right-aligned, stripped)
- Font/button sizing in toolbar (smaller than HTML)
- Dark mode contrast throughout (checkboxes, settings title bar, buttons)
- App taskbar/title icon (missing on Windows 11)
- Font dropdown in toolbar (missing entirely)
- Theme button initial icon respects saved theme at startup (already fixed in this pass)

---
